--- a/style.css
+++ b/style.css
@@ -25,6 +25,8 @@ main {
 .container {
   max-width: 375px;
   margin: 0 29px 40px;
+  display: grid;
+  gap: 24px 0px;
 }
 
 section.info.container {
@@ -53,11 +55,60 @@ p.subtitle {
   background-color: #fff;
   box-shadow: 3px 7px 15px hsl(229deg 37% 86%);
   border-radius: 7px;
+  position: relative;
+  display: grid;
+}
+
+.supervisor::before {
+  position: absolute;
+  top: 0spx;
+  left: 0px;
+  content: '';
+  background-color: hsl(180, 62%, 55%);
+  width: 100%;
+  height: 4px;
+  border-top-right-radius: 7px;
+  border-top-left-radius: 7px;
+}
+
+.team::before {
+  position: absolute;
+  top: 0spx;
+  left: 0px;
+  content: '';
+  background-color: hsl(0, 78%, 62%);
+  width: 100%;
+  height: 4px;
+  border-top-right-radius: 7px;
+  border-top-left-radius: 7px;
+}
+
+.karma::before {
+  position: absolute;
+  top: 0spx;
+  left: 0px;
+  content: '';
+  background-color: hsl(34, 97%, 64%);
+  width: 100%;
+  height: 4px;
+  border-top-right-radius: 7px;
+  border-top-left-radius: 7px;
+}
+
+.calculator::before {
+  position: absolute;
+  top: 0spx;
+  left: 0px;
+  content: '';
+  background-color: hsl(212, 86%, 64%);
+  width: 100%;
+  height: 4px;
+  border-top-right-radius: 7px;
+  border-top-left-radius: 7px;
 }
 
 h3.card-title {
   font-size: 22px;
-  padding-top: 32px;
   padding-left: 26px;
   padding-right: 26px;
   margin-bottom: 11px;
@@ -65,11 +116,14 @@ h3.card-title {
 
 p.card-text {
   font-size: 15px;
-  margin: 10px 26px 5px;
+  margin: 0 26px 5px;
   color: hsl(229, 6%, 66%);
 }
 
 .card img {
   width: 58px;
-  margin: 26px
+  margin: 26px;
+  /* position: relative;
+  left: 190px; */
+  justify-self: end;
 }
