--- a/style.css
+++ b/style.css
@@ -20,28 +20,31 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  /* display: grid;
+  justify-items: center; */
 }
 
 .container {
-  max-width: 375px;
-  margin: 0 29px 40px;
-  display: grid;
-  gap: 24px 0px;
+  max-width: 1175px;
+  margin: 10px 29px 40px;
 }
 
-section.info.container {
+section.info {
   margin-top: 67px;
-  width: 307px
+  width: 307px;
+  display: grid;
+  grid-area: info
 }
 
 .title {
   font-weight: 100;
   color: hsl(229, 6%, 66%);
-  margin-bottom: 10px;
+  margin-bottom: 0;
 }
 
 .secondary-title {
   margin-bottom: 0;
+  margin-top: 0;
 }
 
 p.subtitle {
@@ -57,6 +60,8 @@ p.subtitle {
   border-radius: 7px;
   position: relative;
   display: grid;
+  grid-area: card;
+  margin-bottom: 28px;
 }
 
 .supervisor::before {
@@ -126,4 +131,46 @@ p.card-text {
   /* position: relative;
   left: 190px; */
   justify-self: end;
+}
+
+@media screen and (min-width: 1000px) {
+  section.info {
+    width: 503px;
+    text-align: center;
+  }
+
+  .title, .secondary-title {
+    font-size: 37px;
+  }
+
+  .cards {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 27px;
+    grid-auto-rows: minmax(100px, auto);
+  }
+
+  .card {
+    margin-bottom: 0;
+}
+
+  .team {
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+  }
+
+  .karma {
+    grid-column: 3;
+    grid-row: 2 / 4;
+  }
+
+  .calculator {
+    grid-column: 2;
+    grid-row: 3 / 5;
+  }
+
+  .supervisor {
+    grid-column: 1;
+    grid-row: 2 / 4;
+  }
 }
